# FDTDCurrent

./: .gitignore  README.md  hatch.toml  main.py  pyproject.toml
.github/workflows/: python-publish.yml
fdtd_fun/: __init__.py  bababoi.py  boundary.py  conductor.py  constants.py  detector.py  grid.py  grid_object.py  manim_example.py  material.py  source.py  typing_.py  visualisation.py
fdtd_fun/visualisation/: manim_helpers.py  matplotlib_helpers.py
fdtdcurrent/: __init__.py  _mylogging.py  detector.py  grid.py
fdtdcurrent/visualization/: matplotlib_helpers.py
main/: manimTestGrid.py  plotSlabMiddle.py  plotTestGrid.py  runSlabMiddle.py  runTestGrid.py  util.py
main/Aerial/: aerial.py  aerialConf.py  animateAerial.py
main/LongPair/: plotLongPair.py  runLongPair.py
main/TestGrid/: plotExampleGrid.py  plotTestGrid.py  runExampleGrid.py  runTestGrid.py
main/TestSlab/: boundaryDiscontinuity.py  checkTestSlab.py  observe.py  observeTestSlab.py  runTestSlab.py  spaceCompare.py
media/videos/1080p60/partial_movie_files/GridScene/: partial_movie_file_list.txt
video/: main.py
