[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "fdtd_fun" # obv change the name here but remember to change the package name in the file tree accordingly
version = "0.0.5"
dependencies = ["numpy","manim"]
authors = [
  { name="SeerBird", email="ilya.govorunov@gmail.com" }, # everyone get your details on here at some point if you want
]
description = "A 3D electromagnetic sim for small timescales or whatever"
keywords = ["all kinds of words"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
[project.urls]
Homepage = "https://github.com/SeerBird/ChargeRedistribution"
Issues = "https://github.com/SeerBird/ChargeRedistribution/issues"

